tests/lang/s01_basics/s08_user_defined_data_types/t04_variant_objects_fail1.nim
discard """
description: '''
'''
errormsg: "cannot prove that it's safe to initialize 'fTrue' with the runtime value for the discriminator 'isSelected'"
"""

type
  BoolVariant = object
    case isSelected: bool
      of true:
        fTrue: int

      of false:
        fFalse: int

var it = BoolVariant(fTrue: 12)